<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tblMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:stretchColumns="*"
        tools:ignore="UselessParent">


        <TableRow
            android:id="@+id/tblRowTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="4"
                android:text="@string/CTNC"
                android:textSize="24sp"
                tools:text="Cộng trừ nhân chia" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowA"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblA"
                android:layout_span="1"
                android:text="@string/s_a" />

            <EditText
                android:id="@+id/txtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowB"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblB"
                android:layout_span="1"
                android:text="@string/s_b" />

            <EditText
                android:id="@+id/txtB"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:text="@string/cong"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnTru"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:text="@string/tru"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNhan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:text="@string/nhan"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnChia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:text="@string/chia"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowKQ"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblKQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="4"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>